--- a/misc/userChrome.css
+++ b/misc/userChrome.css
@@ -109,3 +109,57 @@ linux_gtk_window_control_patch.css
 /* These exist only for compatibility with autohide-tabstoolbar.css */
 toolbox#navigator-toolbox > toolbar#nav-bar.browser-toolbar{ animation: none; }
 #navigator-toolbox:hover #TabsToolbar{ animation: slidein ease-out 48ms 1 }
+
+/* Make tabs only show icons */
+
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/icon_only_tabs.css made available under Mozilla Public License v. 2.0
+See the above repository for updates as well as full license text. */
+
+.tab-content > :not(.tab-icon-stack){
+  display: none
+}
+.tab-icon-stack > *{ margin-inline: 0 !important; }
+.tabbrowser-tab{ -moz-box-flex: 0 !important; }
+
+.tabbrowser-tab[fadein]{ min-width: calc(16px + 2 * 10px + 4px) !important; }
+:root[uidensity="compact"] .tabbrowser-tab[fadein]{
+  min-width: calc(16px + 2 * var(--inline-tab-padding,0px) + 4px) !important;
+}
+:root:not([uidensity="compact"]) .tab-content{ padding-inline: 10px !important; }
+
+/* Overlay tab audio icons */
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/overlay_tab_audio_icons.css made available under Mozilla Public License v. 2.0
+See the above repository for updates as well as full license text. */
+
+/* Makes the tab audio indicator show as overlay in all tabs, not just pinned ones */
+
+.tab-icon-image,
+.tab-throbber{ opacity: 1 !important; }
+
+.tab-icon-overlay:not([crashed]){
+    top: -5.5px;
+    inset-inline-end: -6px;
+    z-index: 1;
+    padding: 2px;
+    opacity: 1 !important;
+    stroke: var(--tab-icon-overlay-stroke, black) !important;
+}
+.tab-icon-overlay:not([crashed]):hover{
+  background-color: var(--tab-icon-overlay-stroke, black) !important;
+  border-radius: 10px !important;
+}
+
+/* Make menu bar acrylic */
+/*
+menupopup {
+
+--dark-menu-background-color: transparent !important;
+
+--menu-background-color: var(--dark-menu-background-color) !important;
+
+backdrop-filter: blur(25px) !important;
+
+background-color: rgba(0, 0, 0, 0.80) !important;
+
+}
+*/
